docs(spec): jlink minimal JDK amendment — make orchestration, jdkroot staging, owned fixes